[package]
name = "virpil"
version = "0.1.0"
authors = ["Brett Etter <bbetter9101@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.3.3"
strum = { version = "0.24.0", features = ["derive"] }
array-init = "2.0.0"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
